<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_precautionary_measures"
        android:icon="@drawable/ic_main"
        android:title="@string/precautionary_measures" />
    <item
        android:id="@+id/nav_recently_detected"
        android:icon="@drawable/ic_main"
        android:title="@string/recently_detected" />
    <item
        android:id="@+id/nav_hardware_management"
        android:icon="@drawable/ic_main"
        android:title="@string/hardware_management" />
    <item
        android:id="@+id/nav_trend_analysis"
        android:icon="@drawable/ic_main"
        android:title="@string/trend_analysis" />
    <item
        android:id="@+id/nav_user_main"
        android:icon="@drawable/ic_main"
        android:title="@string/user_profile" />
    <item
        android:id="@+id/nav_live_stream"
        android:icon="@drawable/ic_main"
        android:title="@string/live_stream" />
    <item
        android:id="@+id/nav_notification_settings"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification_settings" />
</menu>
