<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5E7"
    android:padding="16dp">

    <!-- Title TextView -->

    <!-- Login Button -->

    <!-- Signup Button -->

    <TextView
        android:id="@+id/txtTitle"
        android:background="#EFCFA2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:elevation="20dp"
        android:text="@string/welcome_please_choose_an_option"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:elevation="10dp"
        android:padding="15dp"
        android:text="@string/login"
        android:textColorLink="@color/orangeTheme"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/orangeTheme"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:elevation="10dp"
        android:padding="15dp"
        android:text="@string/signup"
        android:textColorLink="#FFF5E7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/orangeTheme"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:elevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wildwatch"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>
